cluster/apps/monitoring/speedtest/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`speedtest.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: speedtest-exporter
          port: 9798
  tls:
    secretName: ${SECRET_CERT}
