cluster/apps/monitoring/speedtest/speedtest-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`speedtest.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: speedtest-exporter
          port: 9799
  tls:
    secretName: ${SECRET_CERT}
